fix: add missing Dark Mode color

--- a/assets/css/dark-mode.scss
+++ b/assets/css/dark-mode.scss
@@ -153,6 +153,16 @@
         color: rgba(255,255,255,0.4);
     }
 
+    #content {
+        h3 {
+            color: #a759ff;
+        }
+        
+        h4 {
+            color: #8f44e6;
+        }
+    }
+
     footer {
         border-color: #333;
     }
